Popularity in references. Start variants refactoring - not compiles yet!

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>me.shutkin.assur</groupId>
     <artifactId>assur-app</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>jar</packaging>
 
     <name>me.shutkin.assur assur-app</name>
