--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,14 @@
 
     <groupId>me.shutkin.assur</groupId>
     <artifactId>assur-app</artifactId>
-    <version>0.1.1</version>
+    <version>0.1.4</version>
     <packaging>jar</packaging>
 
     <name>me.shutkin.assur assur-app</name>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.2.51</kotlin.version>
-        <junit.version>4.12</junit.version>
+        <kotlin.version>1.2.61</kotlin.version>
+        <app.version>${project.version}</app.version>
     </properties>
 
     <dependencies>
@@ -28,12 +27,6 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
@@ -41,6 +34,22 @@
         <testSourceDirectory>src/test/kotlin</testSourceDirectory>
 
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>properties-maven-plugin</artifactId>
+                <version>1.0-alpha-2</version>
+                <executions>
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>write-project-properties</goal>
+                        </goals>
+                        <configuration>
+                            <outputFile>${project.build.outputDirectory}/app.properties</outputFile>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
